Bug 1329068 - Fix layout issue for PropertiesView r=Honza,ntim
MozReview-Commit-ID: HKW38QrPovm

UltraBlame original commit: 0b1352c021f86f96a461b4bcded03bc2ddc793e1

--- a/devtools/client/themes/netmonitor.css
+++ b/devtools/client/themes/netmonitor.css
@@ -6418,8 +6418,23 @@ size
 ;
 }
 }
+#
+security
+-
+tabpanel
 .
 treeTable
+.
+treeLabelCell
+:
+:
+after
+.
+treeTable
+.
+tree
+-
+section
 .
 treeLabelCell
 :
@@ -6507,9 +6522,9 @@ textbox
 ;
 }
 .
-properties
+panel
 -
-view
+container
 {
 height
 :
@@ -6520,6 +6535,16 @@ calc
 48px
 )
 ;
+}
+.
+panel
+-
+container
+.
+properties
+-
+view
+{
 display
 :
 flex
@@ -6530,26 +6555,11 @@ direction
 :
 column
 ;
-}
-#
-headers
+flex
 -
-tabpanel
-.
-properties
--
-view
-{
-height
+grow
 :
-calc
-(
-100vh
--
-135
-.
-5px
-)
+1
 ;
 }
 .
@@ -6649,6 +6659,108 @@ bottom
 left
 :
 0
+;
+}
+.
+tree
+-
+container
+.
+treeTable
+tbody
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+height
+:
+calc
+(
+100
+%
+-
+3px
+)
+;
+}
+.
+tree
+-
+container
+.
+treeTable
+tr
+{
+display
+:
+block
+;
+}
+.
+tree
+-
+container
+.
+treeTable
+td
+:
+last
+-
+child
+{
+width
+:
+100
+%
+;
+}
+.
+tree
+-
+container
+.
+treeTable
+.
+editor
+-
+row
+-
+container
+.
+tree
+-
+container
+.
+treeTable
+tr
+:
+last
+-
+child
+td
+[
+colspan
+=
+"
+2
+"
+]
+{
+display
+:
+block
+;
+height
+:
+100
+%
 ;
 }
 .
@@ -7462,6 +7574,30 @@ timings
 tabpanel
 -
 hook
+{
+display
+:
+flex
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+}
 #
 network
 -
@@ -7496,85 +7632,6 @@ box
 flex
 :
 1
-;
-}
-#
-react
--
-cookies
--
-tabpanel
--
-hook
-#
-react
--
-headers
--
-tabpanel
--
-hook
-#
-react
--
-params
--
-tabpanel
--
-hook
-#
-react
--
-preview
--
-tabpanel
--
-hook
-#
-react
--
-response
--
-tabpanel
--
-hook
-#
-react
--
-security
--
-tabpanel
--
-hook
-#
-react
--
-timings
--
-tabpanel
--
-hook
-#
-primed
--
-cache
--
-chart
-#
-empty
--
-cache
--
-chart
-{
--
-moz
--
-box
--
-orient
-:
-vertical
 ;
 }
 #
